More details for INS project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <h3>
 <a id="differential-corrections-of-low-cost-ins" class="anchor" href="#differential-corrections-of-low-cost-ins" aria-hidden="true"><span class="octicon octicon-link"></span></a>Differential Corrections of Low-Cost INS</h3>
 
-<p>Contact <a href="http://www.ntnu.no/ansatte/erik.wilthil">Erik Wilthil</a></p>
+<p>Contact <a href="http://www.ntnu.no/ansatte/erik.wilthil">Erik Wilthil</a></p> for more information.
       </section>
     </div>
 
