--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Autosea
+subtitle: Master thesis proposals
 ---
 
 <div class="main-explain-area jumbotron">
-  <p>Your website is ready!</p>
-  <p>After editing the <code>_config.yml</code> file to personalize your site's settings, you can start writing blog posts or pages.<p>
-  <p>Below are sample posts for illustration purposes.</p>
+  <p>About autosea and the page</p>
 </div>
 
 <div class="posts-list">
