--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Sensor fusion and collision avoidance for autonomous surface vehicles
 ---
 
 <div class="main-explain-area jumbotron">
-    <p>This page presents project- and master thesis proposals for the Autosea project. The project have scheduled several experiments, starting in December. This means that many of the results from the suggested theses can be verified with real-world data, or tested in an experiment. The project software is developed using <a href="http://www.ros.org/">ROS</a>, which means that features can be implemented in C++ or Python. Additionally, a simulator is being developed in <a href="http://gazebosim.org/">Gazebo</a>.</p>
+    <p>This page presents project- and master thesis proposals for the Autosea project. The project has scheduled several experiments, starting in December. This means that many of the results from the suggested theses can be verified with real-world data, or tested in an experiment. The project software is developed using <a href="http://www.ros.org/">ROS</a>, which means that features can be implemented in C++ or Python. Additionally, a simulator is being developed in <a href="http://gazebosim.org/">Gazebo</a>.</p>
     
     <p>General information about the project can be found at <a href="https://www.ntnu.edu/amos/autosea">AMOS'</a> website.</p>
 </div>
