--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ subtitle: Sensor fusion and collision avoidance for autonomous surface vehicles 
     </ul>
 </div>
 <div class="main-explain-area jumbotron">
-    <p>This page presents project- and master thesis proposals for the Autosea project. The project has gathered considerable ammounts of data in the Trondheimdsfjord during the winter of 2015/2016 together with Maritime Robotics. Many of the results from the suggested theses can be verified with the gathered data, or tested in new experiments. Matlab and Python are the main tools used for development and simulation. Some project software is developed using <a href="http://www.ros.org/">ROS</a> and <a href="http://gazebosim.org/">Gazebo</a>.</p>
+    <p>This page presents project- and master thesis proposals for the Autosea project. The project has gathered considerable ammounts of data in the Trondheimdsfjord during the winter of 2015/2016 and the spring 2017 together with Maritime Robotics. Many of the results from the suggested theses can be verified with the gathered data, or tested in new experiments. Matlab and Python are the main tools used for development and simulation. Some project software is developed using <a href="http://www.ros.org/">ROS</a></p>
     
     <p>General information about the project can be found at <a href="https://www.ntnu.edu/amos/autosea">AMOS'</a> website.</p>
 </div>
