--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@ subtitle: Autonomous all-electric passenger ferries for urban water transport - 
     </ul>
 </div>
 <div class="main-explain-area jumbotron">
-    <p>This page presents project- and master thesis proposals for the Autoferry project. The overall goal of the project is to build and demonstrate a passengerer ferry for autonomous urban water transport 2. The proposals are relevant for students from a wide range of departments at NTNU, inluding ITK, IMT, IE, ID and IIK.</p>
+    <p>This page presents project- and master thesis proposals for the Autoferry project. The overall goal of the project is to build and demonstrate a passengerer ferry for autonomous urban water transport. The proposals are relevant for students from a wide range of departments at NTNU, inluding ITK, IMT, IE, ID and IIK.</p>
     <p>The project has received a lot of media attention, for example <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">this article.</a></p>
 </div>
