new structure of index html autosit wps

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
 <p class="p1"><span class="s1">--- layout: page title: Autosit subtitle: Autonomous ships, intentions and situational awareness - Master thesis proposals ---</span></p>
-<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Automation and autonomy projects</b></span></h3>
+<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Long-term prediction projects</b></span></h3>
 <ul class="ul1">
-  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == "COLAV" %}</span></li>
+  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == “LTP” %}</span></li>
   <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
 </ul>
@@ -31,27 +31,15 @@
   <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
 </ul>
-<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Power and propulsion projects</b></span></h3>
+<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Extended object tracking projects</b></span></h3>
 <ul class="ul1">
-  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == "POWER" %}</span></li>
+  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == “EOT” %}</span></li>
   <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
 </ul>
-<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Human factors projects</b></span></h3>
+<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Collision avoidance projects</b></span></h3>
 <ul class="ul1">
-  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == "HUMAN" %}</span></li>
-  <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
-  <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
-</ul>
-<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Communications and cyber security projects</b></span></h3>
-<ul class="ul1">
-  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == "CYBER" %}</span></li>
-  <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
-  <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
-</ul>
-<h3 style="margin: 0.0px 0.0px 14.0px 0.0px; line-height: 17.0px; font: 14.0px Times; color: #000000; -webkit-text-stroke: #000000"><span class="s1"><b>Risk management projects</b></span></h3>
-<ul class="ul1">
-  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == "RISK" %}</span></li>
+  <li class="li1"><span class="s2"></span><span class="s1">{% for post in paginator.posts %} {% if post.category == “COLAV” %}</span></li>
   <li class="li1"><span class="s2"><a href="file:///Users/edmundbrekke/Documents/autosit.github.io/%7B%7B%20post.url%20%7C%20prepend:%20site.baseurl%20%7D%7D"><span class="s3">{{ post.title }}</span></a></span></li>
   <li class="li1"><span class="s2"></span><span class="s1">{% endif %} {% endfor %}<span class="Apple-converted-space"> </span></span></li>
 </ul>
