--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ subtitle: Autonomous ships, intentions and situational awareness - Master thesis
 ---
 
 <div class="list">
-    <h3>Automation and autonomy projects</h3>
+    <h3>Long term prediction projects</h3>
     <ul>
     {% for post in paginator.posts %}
-    {% if post.category == "COLAV" %}
+    {% if post.category == "LTP" %}
     <li><a href="{{ post.url | prepend: site.baseurl }}" style="color: #000000">{{ post.title }}</a></li>
     {% endif %}
     {% endfor %}
     </ul>
-    <h3>Sensor fusion projects</h3>
+    <h3>Far-range sensor fusion projects</h3>
     <ul>
     {% for post in paginator.posts %}
     {% if post.category == "SF" %}
@@ -21,34 +21,18 @@ subtitle: Autonomous ships, intentions and situational awareness - Master thesis
     {% endif %}
     {% endfor %}
     </ul>
-    <h3>Power and propulsion projects</h3>
+    <h3>Close-range sensor fusion projects</h3>
     <ul>
     {% for post in paginator.posts %}
-    {% if post.category == "POWER" %}
+    {% if post.category == "EOT" %}
     <li><a href="{{ post.url | prepend: site.baseurl }}" style="color: #000000">{{ post.title }}</a></li>
     {% endif %}
     {% endfor %}
     </ul>
-    <h3>Human factors projects</h3>
+    <h3>Collision avoidance projects</h3>
     <ul>
     {% for post in paginator.posts %}
-    {% if post.category == "HUMAN" %}
-    <li><a href="{{ post.url | prepend: site.baseurl }}" style="color: #000000">{{ post.title }}</a></li>
-    {% endif %}
-    {% endfor %}
-    </ul>
-    <h3>Communications and cyber security projects</h3>
-    <ul>
-    {% for post in paginator.posts %}
-    {% if post.category == "CYBER" %}
-    <li><a href="{{ post.url | prepend: site.baseurl }}" style="color: #000000">{{ post.title }}</a></li>
-    {% endif %}
-    {% endfor %}
-    </ul>
-    <h3>Risk management projects</h3>
-    <ul>
-    {% for post in paginator.posts %}
-    {% if post.category == "RISK" %}
+    {% if post.category == "COLAV" %}
     <li><a href="{{ post.url | prepend: site.baseurl }}" style="color: #000000">{{ post.title }}</a></li>
     {% endif %}
     {% endfor %}
