revised index.html with project description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ subtitle: Autonomous ships, intentions and situational awareness - Master thesis
     {% endif %}
     {% endfor %}
     </ul>
-    <h3>Far-range sensor fusion projects</h3>
+    <h3>Sensor fusion projects</h3>
     <ul>
     {% for post in paginator.posts %}
     {% if post.category == "SF" %}
@@ -40,9 +40,6 @@ subtitle: Autonomous ships, intentions and situational awareness - Master thesis
 </div>
 <div class="main-explain-area jumbotron">
 <p>
-This page presents project- and master thesis proposals for the Autoferry project. The overall goal of the project is to build and demonstrate a passengerer ferry for autonomous urban water transport. The proposals are relevant for students from a wide range of departments at NTNU, inluding ITK, IMT, IE, ID and IIK.
-</p>
-<p>
-The project has received a lot of media attention, for example <a href="https://trondheim24.no/nyheter/forerlos-framtid-flotmann-baten/">this article.</a>
+This page presents project- and master thesis proposals for the Autosit project. The Autosit project (2019-2022) is a competence-building research project funded by the Research Council of Norway, with co-funding from DNV GL, Kongsberg Maritime and Maritime Robotics. The main objective of the Autosit project is to enable autonomous ships to predict the intentions of other vessels as part of their situational awareness software. It builds on the <a href="https://www.ntnu.edu/autosea">Autosea project</a> and is closely related to the <a href="https://www.ntnu.edu/autoferry">Autoferry project</a>. 
 </p>
 </div>
