changed description of WP3 to pose estimation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ subtitle: Autonomous ships, intentions and situational awareness - Master thesis
     {% endif %}
     {% endfor %}
     </ul>
-    <h3>Close-range sensor fusion projects</h3>
+    <h3>Pose estimation projects</h3>
     <ul>
     {% for post in paginator.posts %}
     {% if post.category == "EOT" %}
