added index.html to see if it makes github update

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Autosit
-subtitle: Autonomous ships, intentions and situational awareness - Master thesis proposals
+subtitle: Autonomous ships, intentions and situational awareness: Master thesis proposals
 ---
 
 <div class="list">
